--- a/ittech.html
+++ b/ittech.html
@@ -91,90 +91,27 @@ img {
   <!-- Afitificial Intelligence -->
   <div class="w3-container" style="margin-top:60px">
     <div style="text-align:justify">
-      <p  >The IT world&nbsp;is experiencing a number
-      of remarkable developments, some of which may fade into obscurity, but some of
-      which are likely to have a profound impact on how we live our lives. Artificial
-      Intelligence (AI) and Cloud Computing are two of the most important ones we
-      need to consider. In addition, these technologies are both relevant to my
-      project. </p>
+      <p>The IT world is experiencing a number of remarkable developments, some of which may fade into obscurity, but some of which are likely to have a profound impact on how we live our lives. Artificial Intelligence (AI) and Cloud Computing are two of the most important ones we need to consider. In addition, these technologies are both relevant to my project.</p>
       <h1 class="w3-xxxlarge w3-text-red"><b>ARTIFICIAL INTELLIGENCE</b></h1>
       <hr style="border:5px solid red" class="w3-round">
 
       <h1 class="w3-xxlarge w3-text-red">What is Artificial Intelligence?</h1>
-        <p>“Artificial intelligence (AI) refers to the simulation of human
-          intelligence in machines that are programmed to think like humans and mimic
-          their actions. The term may also be applied to any machine that exhibits
-          traits associated with a human mind such as learning and problem-solving”
-          (How Artificial Intelligence Works, 2021). In short, as abroad field of
-          computer science, artificial intelligence (AI) aims to give machines
-          the capabilities to accomplish tasks that normally require human
-          intellectual capacity</p>
+        <p>“Artificial intelligence (AI) refers to the simulation of human intelligence in machines that are programmed to think like humans and mimic their actions. The term may also be applied to any machine that exhibits traits associated with a human mind such as learning and problem-solving.” (How Artificial Intelligence Works, 2021)[2]. In short, as a broad field of computer science, artificial intelligence (AI) aims to give machines the capabilities to accomplish tasks that normally require human intellectual capacity.</p>
 
       <h1 class="w3-xxlarge w3-text-red">State of the art of AI</h1>
       <p><b>Machine learning (ML):</b></p>
-        <p >Machine learning is a subset of artificial intelligence that
-            uses analytic techniques to give machines the ability to handle data without
-            specific instructions. It is possible for systems, in particular, to learn from
-            statistics, recognize patterns, and make decisions with limited human
-            involvement. Machine learning today is more powerful due to more
-            advanced&nbsp;computing technologies. In the past, it grew out of pattern
-            recognition and the concept that computers can learn without being
-            programmed to do specific tasks.As a result ofiterative nature,
-            computers&nbsp;are able to&nbsp;learn from supplied data and
-            use them to make decisions to independently adapt. Machine learning has become
-            more popular in modern society due to algorithms that allow computers to
-            perform more sophisticated calculations on big data
-            and run faster than ever before. For example, we can see its application in Netflix"s
-            online suggestion promotions or self-driving car supported by Google.</p>
+        <p >Machine learning is a subset of artificial intelligence that uses analytic techniques to give machines the ability to handle data without specific instructions. It is possible for systems, in particular, to learn from statistics, recognize patterns, and make decisions with limited human involvement. Machine learning today is more powerful due to more advanced computing technologies. In the past, it grew out of pattern recognition and the concept that computers can learn without being programmed to do specific tasks. As a result of iterative nature, computers are able to learn from supplied data and use them to make decisions to independently adapt. Machine learning has become more popular in modern society due to algorithms that allow computers to perform more sophisticated calculations on big data and run faster than ever before. For example, we can see its application in Netflix's online suggestion promotions or self-driving car supported by Google.</p>
         <p><b>Deep learning (DL):</b></p>
-          <p >“Deep learning takes inspiration from the activity of neurons within the
-          brain to learn how to recognize complex patterns through learned data.
-          This is thanks to the use of algorithms, mainly statistical calculations.
-          The word ‘deep’ refers to the large number of levels of neurons that ML
-          models simultaneously, which helps acquire rich representations of data
-          to obtain performance gains.” (Artificial Intelligence: state of the art
-          - Thinkopen, 2021)[3]. Specifically, deep learning employs massive neural
-          networks with lots of layers of processors to learn complicated patterns in
-          huge amounts of data, taking advantage of modern in computing power and
-          enhanced training methods. In today’s world, deep learning application has
-          evolved significantly, especially in human-to-machine interaction. Gesture,
-          touch and voice recognition technology, for example, is replacing the mouse
-          and the keyboard in computers.</p>
+          <p >“Deep learning takes inspiration from the activity of neurons within the brain to learn how to recognize complex patterns through learned data. This is thanks to the use of algorithms, mainly statistical calculations. The word ‘deep’ refers to the large number of levels of neurons that ML models simultaneously, which helps acquire rich representations of data to obtain performance gains.” (Artificial Intelligence: state of the art - Thinkopen, 2021)[3]. Specifically, deep learning employs massive neural networks with lots of layers of processors to learn complicated patterns in huge amounts of data, taking advantage of modern in computing power and enhanced training methods. In today’s world, deep learning application has evolved significantly, especially in human-to-machine interaction. Gesture, touch and voice recognition technology, for example, is replacing the mouse and the keyboard in computers.</p>
         <p><b>Natural Language Processing (NPL):</b></p>
-          <p >“Natural language processing (NLP) is a branch of artificial intelligence
-            that helps computers understand, interpret and manipulate human language.
-            NLP draws from many disciplines, including computer science and computational
-            linguistics, in its pursuit to fill the gap between human communication
-            and computer understanding.”(What is Natural Language Processing?,
-            2021)[4]. Accordingly, natural language processing refers to the capacity
-            of computers to analysis, comprehend, and produce human language, including
-            speech. Natural language processing encompasses a wide range of techniques
-            for translating human language. NLP tasks, in general, decompose language
-            into smaller pieces, attempt to understand relationships between the parts,
-            and investigate how the pieces come together to produce meaning. In practice,
-            there are many NPL applications that are used but we may not recognize.
-            For example, when we traverse a website by using its constructed search
-            engine or by picking a recommended topic, we have used NLP techniques for
-            search and content classification.</p>
+          <p >“Natural language processing (NLP) is a branch of artificial intelligence that helps computers understand, interpret and manipulate human language. NLP draws from many disciplines, including computer science and computational linguistics, in its pursuit to fill the gap between human communication and computer understanding.”(What is Natural Language Processing?, 2021)[4]. Accordingly, natural language processing refers to the capacity of computers to analysis, comprehend, and produce human language, including speech. Natural language processing encompasses a wide range of techniques for translating human language. NLP tasks, in general, decompose language into smaller pieces, attempt to understand relationships between the parts, and investigate how the pieces come together to produce meaning. In practice, there are many NPL applications that are used but we may not recognize. For example, when we traverse a website by using its constructed search engine or by picking a recommended topic, we have used NLP techniques for search and content classification.</p>
 
       <h1 class="w3-xxlarge w3-text-red">Why is it important?</h1>
       <ul style="list-style-type:disc">
-           <li > <b>Learning by repetition:</b> AI performs a large number of tasks.
-             By virtue of its recursive nature, artificial intelligence (AI)
-             is able to discover through data reliably without tiredness.</li>
-           <li ><b>Adaptation:</b> Artificial intelligence (AI) adapts through the use of
-              progressive learning algorithms. AI identifies patterns, structure in
-              data so that algorithms can learn by itself, and adapt when given new
-              data. </li>
-           <li ><b>More accuracy and deeper analyzing:</b> Deep learning models are taught
-             to learn directly from data. As a result of today"s incredible computing
-             power and big data, AI can analyze deeper data using multi-layered neural
-             networks with incredible accuracy.</li>
-           <li ><b>Integration of AI in products:</b> AI enhances the intelligence of existing
-             products. Many of the products we use have been enhanced with AI capabilities,
-             similar to how Siri was added as a feature to Apple products. Furthermore, bots
-             and intelligent systems are now being combined with massive amounts of data
-             to improve a wide range of technologies.</li>
+           <li > <b>Learning by repetition:</b> AI performs a large number of tasks. By virtue of its recursive nature, artificial intelligence (AI) is able to discover through data reliably without tiredness.</li>
+           <li ><b>Adaptation:</b> Artificial intelligence (AI) adapts through the use of progressive learning algorithms. AI identifies patterns, structure in data so that algorithms can learn by itself, and adapt when given new data. </li>
+           <li ><b>More accuracy and deeper analyzing:</b> Deep learning models are taught to learn directly from data. As a result of today's incredible computing power and big data, AI can analyze deeper data using multi-layered neural networks with incredible accuracy.</li>
+           <li ><b>Integration of AI in products:</b> AI enhances the intelligence of existing products. Many of the products we use have been enhanced with AI capabilities, similar to how Siri was added as a feature to Apple products. Furthermore, bots and intelligent systems are now being combined with massive amounts of data to improve a wide range of technologies.</li>
       </ul>
 
       <h1 class="w3-xxlarge w3-text-red">Development in the future</h1>
