--- a/tools.html
+++ b/tools.html
@@ -92,6 +92,14 @@ img {
     <p>My webpage link: <a href="https://kietduonganh.github.io/DuongAnhKiet/"><b>https://kietduonganh.github.io/DuongAnhKiet/</b></a></p>
     <p>My GitHub repository link: <a href="https://github.com/KietDuongAnh/DuongAnhKiet/tree/main"><b>https://github.com/KietDuongAnh/DuongAnhKiet/tree/main</b></a></p>
     <p>Overall, Git and GitHub are the two applications that I use throughout my work on assignment 2. While GitHub serves as an easily accessible data repository, Git allows me to easily track and manage that data using a simple yet effective syntax.</p>
+    <img src="https://raw.githubusercontent.com/KietDuongAnh/DuongAnhKiet/main/images/GitHub.png" alt="GitHub">
+    <img src="https://raw.githubusercontent.com/KietDuongAnh/DuongAnhKiet/main/images/Git.png" alt="Git">
+    <p>Aside from using GitHub to host my website, Atom is another tool I used to create and develop this web. Atom is developed by GitHub, a user friendly, open-text editor. It can be used free of charge by novice and expert developers, as the system is easy to use and includes a broad range of features that making a developer's work easier.</p>
+    <img src="https://raw.githubusercontent.com/KietDuongAnh/DuongAnhKiet/main/images/AtomFeature1.png" alt="AtomFeature1">
+    <img src="https://raw.githubusercontent.com/KietDuongAnh/DuongAnhKiet/main/images/AtomFeature2.png" alt="AtomFeature2">
+    <p style="text-align: center">Integration with Git</p>
+    <img src="https://raw.githubusercontent.com/KietDuongAnh/DuongAnhKiet/main/images/AtomFeature3.png" alt="AtomFeature3">
+    <p style="tetx-align:center">Text auto-completion</p>
   </div>
 
 
