--- a/itwork.html
+++ b/itwork.html
@@ -114,7 +114,7 @@ img {
       <b>Question 3. Could you please tell us about your IT work?</b> <br>
       Answer: “I am in charge of software developer position in project team of my company. Actually, my main tasks is doing coding to build and develop software.” <br><br>
       <b>Question 4. Could also you tell me about your current or recent projects?</b> <br>
-      Answer: “I also take responsibility for gather ideas from my teammates and design further plan for my team after discussing with my project manager. Currently, my company is cooperate with GE Healthcare, American company specializing in the production of medical equipment and healthcare IT systems. We are working on a project that create a storage and communication systems for hospital in Vietnam. ” <br><br>
+      Answer: “I also take responsibility for gather ideas from my teammates and design further plan for my team after discussing with my project manager. Currently, my company is cooperate with GE Healthcare, an American company specializing in the production of medical equipment and healthcare IT systems. We are working on a project that create a storage and communication systems for hospital in Vietnam. ” <br><br>
       <b>Question 5. Who are the various people with whom you interact at work?</b> <br>
       Answer: “Actually, I have to work with many kind of people including other members in my team project, my company business partner, and also my clients. But most of time is spending for working with my team.” <br><br>
       <b>Question 6. Could you please share any interactions you've had with other IT professionals?</b> <br>
